--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/flexberry-ember-demo.css">
+    <link rel="icon" href="assets/images/favicon.ico">
 
     {{content-for "head-footer"}}
   </head>
@@ -21,5 +22,6 @@
     <script src="assets/flexberry-ember-demo.js"></script>
 
     {{content-for "body-footer"}}
+    <script src="//cdn.polyfill.io/v1/polyfill.js?features=es6"></script>
   </body>
 </html>
